feat: Agregar diseño responsive para móviles y tablets
📱 Cambios implementados:
- Nuevo archivo responsive.css con media queries
- Botón hamburguesa para menú móvil
- Sidebar colapsable en pantallas pequeñas
- Tablas con scroll horizontal
- Formularios y filtros en columna
- Botones más grandes para touch
- Grid de módulos adaptable

✅ Desktop se ve IGUAL (no se rompe nada)
✅ Móvil/tablet se adapta automáticamente
✅ Breakpoints: 1024px (tablet), 768px (móvil), 480px (móvil pequeño)

--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -569,8 +569,18 @@
             color: #0066CC;
         }
     </style>
+
+    <!-- 📱 Responsive CSS para móviles/tablets -->
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
+    <!-- 📱 Botón menú móvil (solo visible en móvil) -->
+    <button class="mobile-menu-btn" onclick="toggleMobileSidebar()" style="display: none;">
+        ☰
+    </button>
+
+    <!-- 📱 Overlay para cerrar sidebar en móvil -->
+    <div class="sidebar-overlay" onclick="closeMobileSidebar()"></div>
 
     <!-- 🏢 MODAL DE LOGIN MULTI-TENANT PROFESIONAL -->
     <div id="loginContainer" class="login-container">
@@ -6136,6 +6146,42 @@
     }
 
     console.log('✅ Sistema Multi-Tenant inicializado');
+    </script>
+
+    <!-- 📱 Script para menú móvil responsive -->
+    <script>
+        function toggleMobileSidebar() {
+            const sidebar = document.querySelector('.sidebar');
+            const overlay = document.querySelector('.sidebar-overlay');
+
+            if (sidebar && overlay) {
+                sidebar.classList.toggle('active');
+                overlay.classList.toggle('active');
+            }
+        }
+
+        function closeMobileSidebar() {
+            const sidebar = document.querySelector('.sidebar');
+            const overlay = document.querySelector('.sidebar-overlay');
+
+            if (sidebar && overlay) {
+                sidebar.classList.remove('active');
+                overlay.classList.remove('active');
+            }
+        }
+
+        // Cerrar sidebar al hacer click en un link del menú (en móvil)
+        document.addEventListener('DOMContentLoaded', function() {
+            if (window.innerWidth <= 768) {
+                const sidebarLinks = document.querySelectorAll('.sidebar a');
+                sidebarLinks.forEach(link => {
+                    link.addEventListener('click', closeMobileSidebar);
+                });
+            }
+        });
+
+        // Cerrar sidebar al cambiar de orientación
+        window.addEventListener('orientationchange', closeMobileSidebar);
     </script>
 </body>
 </html>
