feat: Sistema profesional de consentimiento biométrico (Ley 25.326 + GDPR + BIPA)
- Módulo completo de gestión de consentimientos biométricos
- API endpoints: /api/v1/biometric/consents (GET/POST)
- Campo de consentimiento en ficha de usuario (solo lectura)
- Filtrado de estadísticas emocionales por consentimiento activo
- Vistas SQL actualizadas con JOIN a biometric_consents
- Cumplimiento legal: Ley 25.326 (Argentina), GDPR, BIPA
- Validación biométrica requerida para otorgar/revocar
- Auditoría completa y trazabilidad legal

--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -1690,6 +1690,7 @@
     <script src="js/modules/licensing-management.js"></script>
     <script src="js/modules/art-management.js"></script>
     <script src="js/modules/terms-conditions.js"></script>
+    <script src="js/modules/biometric-consent.js"></script>
 
     <!-- Geolocation & Mapping -->
     <script src="js/modules/google-maps-integration.js"></script>
