🔧 DEBUG: Actualización directa de banner y logs mejorados
PROBLEMA IDENTIFICADO:
- Banner no se actualiza después del login
- Selector de idiomas no aparece

CAMBIOS:
1. BANNER - Actualización directa sin localStorage:
   - Removida llamada a updateCompanyInfo() que leía de localStorage
   - Actualización DIRECTA de elementos del DOM con datos de currentCompany
   - Logs detallados para debugging: data.company, currentCompany construido

2. SELECTOR DE IDIOMAS - Validaciones mejoradas:
   - Validación de container antes de crear selector
   - Limpieza de container.innerHTML antes de appendChild
   - Logs de cada paso del proceso
   - changeLanguage en lugar de setLanguage
   - Validación si container ya tiene hijos

3. LOGS DE DEBUGGING:
   - 🔍 [LOGIN DEBUG] Datos de empresa recibidos del backend
   - 🔍 [LOGIN DEBUG] currentCompany construido
   - ✅ [LOGIN] Banner actualizado con: {nombre, direccion, telefono}
   - 🌍 [LANGUAGE] Usuario cambió idioma a: X
   - ✅ [LANGUAGE] Idioma cambiado con translator

SIGUIENTE PASO:
- Revisar consola del navegador para ver logs
- Verificar si data.company viene con datos completos
- Verificar si elementos del DOM existen

Version: FE v3.2.1

--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -1615,7 +1615,7 @@
                     </div>
                     <div class="user-info" style="text-align: right;">
                         <!-- Info de Versiones en Header -->
-                        <div id="version-info-header" style="font-size: 8px; color: rgba(255,255,255,0.7); font-family: monospace; margin-bottom: 2px; transform: translateY(-8px) translateX(5px); white-space: nowrap;">FE: v3.2.0 | BE: v1.3.0</div>
+                        <div id="version-info-header" style="font-size: 8px; color: rgba(255,255,255,0.7); font-family: monospace; margin-bottom: 2px; transform: translateY(-8px) translateX(5px); white-space: nowrap;">FE: v3.2.1 | BE: v1.3.0</div>
                         <div id="currentUserName" style="font-size: 13px; font-weight: 600; color: white; margin-bottom: 2px;">Usuario</div>
                         <div id="currentUserRole" style="font-size: 10px; color: rgba(255,255,255,0.8); text-transform: uppercase; letter-spacing: 0.5px;">Admin</div>
                     </div>
@@ -6193,6 +6193,9 @@
                     email: data.company?.email || ''
                 };
 
+                console.log('🔍 [LOGIN DEBUG] Datos de empresa recibidos del backend:', data.company);
+                console.log('🔍 [LOGIN DEBUG] currentCompany construido:', currentCompany);
+
                 // Guardar en localStorage - REACTIVADO para módulos biométricos
                 localStorage.setItem('authToken', data.token); // REACTIVADO - Necesario para módulos biométricos
                 localStorage.setItem('currentUser', JSON.stringify(data.user));
@@ -6205,15 +6208,27 @@
                 window.companyAuthToken = authToken; // Para compatibilidad adicional
                 isAuthenticated = true;
 
-                console.log('✅ [LOGIN] Datos de empresa guardados:', currentCompany);
+                console.log('✅ [LOGIN] Datos guardados en localStorage');
                 console.log('✅ Login exitoso - configurando variables globales:', {
                     selectedCompany: window.selectedCompany,
                     authToken: !!window.authToken,
                     isAuthenticated: window.isAuthenticated
                 });
 
-                // Actualizar banner con datos de empresa INMEDIATAMENTE
-                updateCompanyInfo();
+                // Actualizar banner con datos de empresa DIRECTAMENTE (sin leer de localStorage)
+                console.log('🔄 [LOGIN] Actualizando banner directamente...');
+                try {
+                    document.getElementById('companyNameDisplay').textContent = currentCompany.name || 'Empresa Cliente';
+                    document.getElementById('companyAddressDisplay').textContent = currentCompany.address || 'Dirección empresa';
+                    document.getElementById('companyPhoneDisplay').textContent = `📞 ${currentCompany.phone || 'Teléfono'}`;
+                    console.log('✅ [LOGIN] Banner actualizado con:', {
+                        nombre: currentCompany.name,
+                        direccion: currentCompany.address,
+                        telefono: currentCompany.phone
+                    });
+                } catch (error) {
+                    console.error('❌ [LOGIN] Error actualizando banner:', error);
+                }
 
                 // Los empleados se cargarán automáticamente cuando se abra el módulo biométrico
                 console.log('🔄 [LOGIN] Empleados se cargarán al abrir módulo de registro biométrico');
