--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -1013,17 +1013,27 @@
                 });
 
                 fallbackSelector.addEventListener('change', async function() {
-                            if (window.translator && typeof window.translator.setLanguage === 'function') {
-                                window.translator.setLanguage(this.value);
+                            const selectedLang = this.value;
+                            console.log('🌍 [LANGUAGE] Usuario cambió idioma a:', selectedLang);
+
+                            if (window.translator && typeof window.translator.changeLanguage === 'function') {
+                                await window.translator.changeLanguage(selectedLang);
+                                console.log('✅ [LANGUAGE] Idioma cambiado con translator a:', selectedLang);
                             } else {
-                                localStorage.setItem('preferredLanguage', this.value);
+                                localStorage.setItem('user_language', selectedLang);
+                                console.log('⚠️ [LANGUAGE] Idioma guardado sin translator, recargando...');
                                 location.reload();
                             }
                         });
-                        
+
+                        container.innerHTML = '';
                         container.appendChild(fallbackSelector);
-                        console.log('✅ [HEADER] Selector fallback creado');
+                        console.log('✅ [HEADER] Selector de idioma fallback creado y agregado al DOM');
+                    } else {
+                        console.warn('⚠️ [HEADER] Container ya tiene hijos, no se creó selector');
                     }
+                } else {
+                    console.error('❌ [HEADER] languageSelectorContainer no encontrado en el DOM');
                 }
             }
             
@@ -1615,7 +1625,7 @@
                     </div>
                     <div class="user-info" style="text-align: right;">
                         <!-- Info de Versiones en Header -->
-                        <div id="version-info-header" style="font-size: 8px; color: rgba(255,255,255,0.7); font-family: monospace; margin-bottom: 2px; transform: translateY(-8px) translateX(5px); white-space: nowrap;">FE: v3.2.2 | BE: v1.3.0</div>
+                        <div id="version-info-header" style="font-size: 8px; color: rgba(255,255,255,0.7); font-family: monospace; margin-bottom: 2px; transform: translateY(-8px) translateX(5px); white-space: nowrap;">FE: v3.2.3 | BE: v1.3.0</div>
                         <div id="currentUserName" style="font-size: 13px; font-weight: 600; color: white; margin-bottom: 2px;">Usuario</div>
                         <div id="currentUserRole" style="font-size: 10px; color: rgba(255,255,255,0.8); text-transform: uppercase; letter-spacing: 0.5px;">Admin</div>
                     </div>
