fix: Quitar data-translate del banner de empresa - v3.8.1
PROBLEMA: Banner de empresa mostraba 'Empresa Cliente' en lugar del nombre real
CAUSA: data-translate sobrescribía el contenido dinámico
SOLUCIÓN: Quitar data-translate de companyNameDisplay, companyAddressDisplay, companyPhoneDisplay

Estos elementos se actualizan programáticamente con datos reales, NO deben traducirse.

--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -1738,10 +1738,10 @@
                     <div style="background: linear-gradient(135deg, #1e3c72 0%, #2a5298 40%, #3498db 100%); padding: 1px 16px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.2); min-width: 280px; border: 2px solid rgba(255,255,255,0.3); display: flex; align-items: center; gap: 10px;">
                         <span style="color: #f39c12; font-size: 20px;">🏢</span>
                         <div style="text-align: left; flex: 1;">
-                            <div id="companyNameDisplay" style="font-weight: 700; color: white; margin-bottom: 0px; font-size: 18px;" data-translate="login.company_client">Empresa Cliente</div>
+                            <div id="companyNameDisplay" style="font-weight: 700; color: white; margin-bottom: 0px; font-size: 18px;">Empresa Cliente</div>
                             <div style="font-size: 10px; color: rgba(255,255,255,0.9); line-height: 1.1;">
-                                <div id="companyAddressDisplay" style="margin-bottom: 1px;" data-translate="login.company_address">Dirección empresa</div>
-                                <div id="companyPhoneDisplay" data-translate="login.company_phone">📞 Teléfono</div>
+                                <div id="companyAddressDisplay" style="margin-bottom: 1px;">Dirección empresa</div>
+                                <div id="companyPhoneDisplay">📞 Teléfono</div>
                             </div>
                         </div>
                     </div>
