fix: Traducción completa del formulario de login - v3.8.2
PROBLEMAS RESUELTOS:
1. Banner de empresa mostraba placeholder en lugar de datos reales
   ✅ Quitados data-translate de companyNameDisplay, Address, Phone

2. Solo header traducía, formulario login NO traducía
   ✅ Agregado translator.updateInterface() después de mostrar modal login
   ✅ Agregado translator.updateInterface() en initializeMultiTenantLogin()
   ✅ Agregado data-translate al label del selector de empresa

CAMBIOS:
- Línea 5773-5778: Traducir modal después de mostrarlo
- Línea 6164-6170: Traducir formulario multi-tenant después de cargarlo
- Línea 691: Label selector empresa con data-translate="login.select_company"
- Línea 1741-1744: Banner empresa SIN data-translate (datos dinámicos)

RESULTADO:
- ISI (Argentina) inicia en ESPAÑOL automáticamente
- Banner muestra nombre REAL de empresa (ISI, MegaSoft, etc.)
- Formulario login SE TRADUCE completamente (usuario, contraseña, botones)
- Al cambiar idioma TODO se traduce, no solo el header

--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -688,7 +688,7 @@
             <form id="multiTenantLoginForm">
                 <!-- PASO 1: SELECCIONAR EMPRESA -->
                 <div class="form-group">
-                    <label for="companySelect">Empresa:</label>
+                    <label for="companySelect" data-translate="login.select_company">🏢 Seleccionar Empresa</label>
                     <select id="companySelect" class="form-control" required>
                         <option value="" data-translate="login.loading_companies">Cargando empresas...</option>
                     </select>
@@ -5768,6 +5768,14 @@
                     modal.style.alignItems = 'center';
                     modal.style.zIndex = '9999';
                     console.log('🔐 [INIT] Modal de login mostrado y centrado');
+
+                    // 🌍 TRADUCIR MODAL DESPUÉS DE MOSTRARLO
+                    setTimeout(() => {
+                        if (window.translator) {
+                            console.log('🌍 [TRANSLATION] Traduciendo modal de login...');
+                            window.translator.updateInterface();
+                        }
+                    }, 200);
                 }
             }, 100);
             
@@ -6152,6 +6160,14 @@
         try {
             await loadCompanies();
             setupEventListeners();
+
+            // 🌍 TRADUCIR FORMULARIO DE LOGIN DESPUÉS DE CARGARLO
+            setTimeout(() => {
+                if (window.translator) {
+                    console.log('🌍 [TRANSLATION] Traduciendo formulario multi-tenant...');
+                    window.translator.updateInterface();
+                }
+            }, 300);
         } catch (error) {
             console.error('❌ Error inicializando sistema:', error);
             showError('generalError', 'Error inicializando el sistema');
